[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "yttop"
version = "0.1.0"
description = "Fetch the top N YouTube videos from a channel/playlist and save titles + links to a timestamped .txt"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["yt-dlp>=2024.8.6"]

[project.scripts]
yttop = "yttop.cli:main"

[tool.hatch.build]
packages = ["src/yttop"]
